finshed backend for my project management system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mail.username=praveenin321@gmail.com
 spring.mail.password=mtea vwzq qzkt rtda
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+razorpay.api.key = rzp_test_7kROpXqD0kmNcF
+razorpay.api.secret=dExocXRb83b6lm9xi9ZIjf7R
