--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=praveenin321@gmail.com
-spring.mail.password=mtea vwzq qzkt rtda
+spring.mail.password=hhug iyjo njay vxlg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
 
 
 razorpay.api.key = rzp_test_7kROpXqD0kmNcF
