--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=praveen1357M@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.show-sql: true
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
