--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.username=root
 spring.datasource.password=praveen1357M@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.hibernate.ddl-auto=update
+
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.mail.host=smtp.gmail.com
