--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version>
 		</dependency>
 		<dependency>
 			<groupId>com.razorpay</groupId>
