--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.23</version>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.razorpay</groupId>
@@ -103,7 +103,7 @@
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-mail</artifactId>
-    		<!-- <version>3.1.5</version> -->
+    		<version>3.1.5</version>
 		</dependency>
 		<dependency>
     <groupId>org.springframework</groupId>
