added neon db url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=project-management
 server.port=5454
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagementsystem
+spring.datasource.url=jdbc:postgresql://ep-restless-lake-a83exvtg-pooler.eastus2.azure.neon.tech/neondb?user=neondb_owner&password=npg_uhck9E2zwxfl&sslmode=require
 spring.datasource.username=root
 spring.datasource.password=praveen1357M@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
