--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 spring.application.name=project-management
-
-
 server.port=5454
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://ep-restless-lake-a83exvtg-pooler.eastus2.azure.neon.tech/neondb?user=neondb_owner&password=npg_uhck9E2zwxfl&sslmode=require
-spring.datasource.username=root
-spring.datasource.password=praveen1357M@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.jpa.show-sql: true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-# spring.jpa.hibernate.ddl-auto=update
-
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_uhck9E2zwxfl
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -22,6 +16,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
-
-razorpay.api.key = rzp_test_7kROpXqD0kmNcF
+razorpay.api.key=rzp_test_7kROpXqD0kmNcF
 razorpay.api.secret=dExocXRb83b6lm9xi9ZIjf7R
