--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+	  <version>42.7.3</version>
+      <scope>runtime</scope>
+    </dependency>
+		<dependency>
 			<groupId>com.razorpay</groupId>
 			<artifactId>razorpay-java</artifactId>
 			<version>1.4.3</version>
